In bigtrouble branch simple html file changes before rebase conflicts.

--- a/simple.html
+++ b/simple.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <!--
 	Copyright 2022 Git Training
-	Adding changes before rebasing conflicts
-	Some silly changes from master branch
 -->
 <head>
-	<title>Silly Changes</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,10 +14,9 @@
 </head>
 <body>
 	<main class="container">
-	<!-- Junk Content Goes Here -->
+	<!-- Content Goes Here -->
 		<p>
-			Just Some stuff for new,
-			not sure if we should replace interesting Content
+			Just Some Interesting Content
 		</p>
 	</main>
 	<footer class="container">
