Master branch changes to simple.html

--- a/simple.html
+++ b/simple.html
@@ -2,9 +2,10 @@
 <!--
 	Copyright 2022 Git Training
 	Adding changes before rebasing conflicts
+	Some silly changes from master branch
 -->
 <head>
-	<title>A Very Respectful Website</title>
+	<title>Silly Changes</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -16,9 +17,10 @@
 </head>
 <body>
 	<main class="container">
-	<!-- Content Goes Here -->
+	<!-- Junk Content Goes Here -->
 		<p>
-			Just Some Interesting Content
+			Just Some stuff for new,
+			not sure if we should replace interesting Content
 		</p>
 	</main>
 	<footer class="container">
