--- a/simple.html
+++ b/simple.html
@@ -3,6 +3,7 @@
 	Copyright 2022 Git Training
 -->
 <head>
+	<title>Los of trouble, in a little repo</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
