local:updaing simple.html copyright notice

--- a/simple.html
+++ b/simple.html
@@ -21,7 +21,7 @@
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Git Training Class in 2022</p>
+		<p>2022 Git. Training Class, All Rights Reserved</p>
 	</footer>
 </body>
 </html>
