--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Copyright 2022 Git Training
 -->
 <head>
-	<title>Los of trouble, in a little repo</title>
+	<title>Updating title for Stash example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,6 +18,7 @@
 	<!-- Content Goes Here -->
 		<p>
 			Just Some Interesting Content
+			Adding more content
 		</p>
 	</main>
 	<footer class="container">
